# voxel-game

./: .gitignore  ARCHITECTURE.md  CAMERA_CONTROLS.md  CHANGES_SUMMARY.md  CMakeLists.txt  CODE_STYLE.md  DEBUG_MODE.md  DYNAMIC_CHUNK_LOADING.md  ELEVATION_SHADING.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  README.md  RENDERING_GUIDE.md  SHADER_COMPILATION.md  TESTING_GUIDE.md  compile_shaders.sh
_codeql_build_dir/: VoxelGame
assets/: textures
assets/shaders/: overlay.frag  overlay.vert  shader.frag  shader.vert
src/: main.cpp
src/engine/: application.cpp  application.h  camera.cpp  camera.h  window.cpp  window.h
src/graphics/: mesh.cpp  mesh.h  renderer.cpp  renderer.h
src/graphics/vulkan/: command_pool.cpp  command_pool.h  device.cpp  device.h  framebuffers.cpp  framebuffers.h  image_views.cpp  image_views.h  overlay_pipeline.cpp  overlay_pipeline.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  swapchain.cpp  swapchain.h  sync_objects.cpp  sync_objects.h  vulkan_instance.cpp  vulkan_instance.h
src/utils/: math.cpp  math.h  math_utils.h  tuple_hash.h
src/world/: chunk.cpp  chunk.h  chunk_manager.cpp  chunk_manager.h  mesh_generator.cpp  mesh_generator.h  noise.cpp  noise.h  terrain_config.h  voxel.cpp  voxel.h
